--- a/Desafios/desafio012/estilo.css
+++ b/Desafios/desafio012/estilo.css
@@ -1,14 +1,26 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3:  'Sriracha', cursive;
+
+}
+
 *{
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body{
     background-color: darkgray;
     min-height: 100vh;
-
+    font-family: var(--fonte1);
 }
 
 header{
@@ -20,6 +32,8 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header > p{
@@ -42,6 +56,8 @@ section{
     padding-bottom: 10%;
     line-height: 2em;
     padding-left: 40px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -56,7 +72,8 @@ section.imagem{
 
 section.imagem > p {
     background-color: rgba(0, 0, 0, 0.185);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 footer{
