--- a/Desafios/desafio012/estilo.css
+++ b/Desafios/desafio012/estilo.css
@@ -57,7 +57,11 @@ section{
     line-height: 2em;
     padding-left: 40px;
     font-family: var(--fonte3);
-    font-size: 3.5vw;
+    font-size: 3vw;
+}
+
+section >p {
+    padding-bottom: 2em;
 }
 
 section.normal{
@@ -66,14 +70,30 @@ section.normal{
 }
 
 section.imagem{
-    background-color: rgba(19, 17, 17, 0.833);
+    background-color: rgba(2, 2, 2, 0.96);
     color: white;
+    box-shadow: inset 6px 6px 10px 0px black;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    background-color: rgba(0, 0, 0, 0.185);
+    background-color: rgba(0, 0, 0, 0.57);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01{
+    background-image: url(imagens/background01.jpg);
+    background-repeat: no-repeat;
+    
+}
+
+section#img02{
+    background-image: url(imagens/background02.jpg);
+    background-repeat: no-repeat;
+    
 }
 
 footer{
